# lfm25-audio-onnx

./: Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
src/: lib.rs
