[package]
name = "lfm25-audio-onnx-plugin"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace — fully decoupled from any parent so the plugin's
# `ort` pin (and other heavy deps) never unify against the host's.
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
debug = 0

[profile.dev]
opt-level = 1
debug = 1
incremental = true

[lib]
name = "lfm25_audio_onnx_plugin"
crate-type = ["cdylib"]

# Path-3 hand-rolled plugin: depends ONLY on the skinny
# `remotemedia-plugin-sdk` umbrella. Does NOT link `remotemedia-core` —
# that's what lets the LFM2.5-Audio ONNX node + its ort dependency be
# removed from the host's core crate without changing this plugin's
# surface area.
[dependencies]
remotemedia-plugin-sdk = { git = "https://github.com/RemoteMedia-SDK/remotemedia-sdk.git", branch = "main" }

# `abi_stable` must be a direct dep so the attribute macros expanded by
# `plugin_export!()` (`#[sabi_extern_fn]`, `#[export_root_module]`)
# resolve `::abi_stable` at the crate root.
abi_stable = "0.11"

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1"
parking_lot = "0.12"
rand = "0.8"
rustfft = "6.2"
tokenizers = "0.20"

# Pin `ort` directly. Matches the host workspace's `=2.0.0-rc.12` pin
# for behavioural parity. The standalone workspace block above prevents
# cross-tree unification anyway.
ort = { version = "=2.0.0-rc.12", features = ["half", "download-binaries"] }
